--- a/prepros.cfg
+++ b/prepros.cfg
@@ -100,6 +100,214 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "d2649cc8": {
+          "id": "d2649cc8",
+          "path": "css/signup.css",
+          "output": "css/signup-dist.css",
+          "name": "signup.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7be1ff00": {
+          "id": "7be1ff00",
+          "path": "css/normalize.css",
+          "output": "css/normalize-dist.css",
+          "name": "normalize.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "0c7b55b5": {
+          "id": "0c7b55b5",
+          "path": "css/style.css",
+          "output": "css/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "39b42b4a": {
+          "id": "39b42b4a",
+          "path": "css/base/base.css",
+          "output": "css/base/base-dist.css",
+          "name": "base.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "71d405d4": {
+          "id": "71d405d4",
+          "path": "css/comp/index.css",
+          "output": "css/comp/index-dist.css",
+          "name": "index.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "a2106a6a": {
+          "id": "a2106a6a",
+          "path": "js/components/login.js",
+          "output": "js/components/login-dist.js",
+          "name": "login.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "91ca06f1": {
+          "id": "91ca06f1",
+          "path": "js/components/logout.js",
+          "output": "js/components/logout-dist.js",
+          "name": "logout.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "3930e866": {
+          "id": "3930e866",
+          "path": "js/components/signup.js",
+          "output": "js/components/signup-dist.js",
+          "name": "signup.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a69c0467": {
+          "id": "a69c0467",
+          "path": "js/components/team.js",
+          "output": "js/components/team-dist.js",
+          "name": "team.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "27ba0272": {
+          "id": "27ba0272",
+          "path": "js/components/user.js",
+          "output": "js/components/user-dist.js",
+          "name": "user.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "ea202623": {
+          "id": "ea202623",
+          "path": "js/controllers/login-view-controller.js",
+          "output": "js/controllers/login-view-controller-dist.js",
+          "name": "login-view-controller.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "8544c031": {
+          "id": "8544c031",
+          "path": "js/controllers/signup-view-controller.js",
+          "output": "js/controllers/signup-view-controller-dist.js",
+          "name": "signup-view-controller.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e0ce85e7": {
+          "id": "e0ce85e7",
+          "path": "js/controllers/team-view-controller.js",
+          "output": "js/controllers/team-view-controller-dist.js",
+          "name": "team-view-controller.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
