--- a/prepros.cfg
+++ b/prepros.cfg
@@ -101,22 +101,6 @@
           "parents": [],
           "type": "html"
         },
-        "d2649cc8": {
-          "id": "d2649cc8",
-          "path": "css/signup.css",
-          "output": "css/signup-dist.css",
-          "name": "signup.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "7be1ff00": {
           "id": "7be1ff00",
           "path": "css/normalize.css",
@@ -308,6 +292,54 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "2bb37984": {
+          "id": "2bb37984",
+          "path": "css/comp/login.css",
+          "output": "css/comp/login-dist.css",
+          "name": "login.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "cbab1510": {
+          "id": "cbab1510",
+          "path": "css/comp/signup.css",
+          "output": "css/comp/signup-dist.css",
+          "name": "signup.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f34d83b6": {
+          "id": "f34d83b6",
+          "path": "css/comp/team.css",
+          "output": "css/comp/team-dist.css",
+          "name": "team.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
